--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "^1.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "eslint": "^8.40.0",
+    "eslint-config-airbnb": "^19.0.4",
     "parcel": "^2.8.3",
     "postcss": "^8.2.14",
-    "postcss-nested": "^6.0.1"
+    "postcss-nested": "^6.0.1",
+    "stylelint": "^15.6.1",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "express": "^4.18.2",
