--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,21 @@
 {
   "extends": "airbnb",
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint/eslint-plugin"],
   "rules": {
     "max-len": [2, 100],
     "@typescript-eslint/no-unused-vars": 2
+  },
+  "parserOptions":  {
+    "ecmaVersion": 6,
+    "sourceType":  "module",
+    "ecmaFeatures":  {
+      "jsx":  true
+    }
+  },
+  "env": {
+    "es6": true,
+    "browser": true,
+    "node": true
   }
 }
