--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "author": "Papakhin Alexander",
   "license": "MIT",
   "scripts": {
-    "dev": "rm -rf dist && parcel src/index.hbs --no-cache",
-    "build": "parcel build src/index.hbs",
+    "dev": "rm -rf dist && parcel src/index.html --no-cache",
+    "build": "parcel build src/index.html",
     "start": "npm run build && node server.js"
   },
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars": "^1.0.9",
+    "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
@@ -18,10 +19,11 @@
     "postcss": "^8.2.14",
     "postcss-nested": "^6.0.1",
     "stylelint": "^15.6.1",
-    "typescript": "^5.0.4"
+    "typescript": "4.7.4"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "uuid": "^9.0.0"
   }
 }
