--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,26 @@
 {
-  "extends": "airbnb",
+  "extends": "airbnb-base",
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint/eslint-plugin"],
   "rules": {
-    "max-len": [2, 100],
-    "@typescript-eslint/no-unused-vars": 2
+    "max-len": [2, 160],
+    "@typescript-eslint/no-unused-vars": 2,
+    "import/no-unresolved": 0,
+    "import/extensions": 0,
+    "import/prefer-default-export": 0,
+    "no-underscore-dangle": 0,
+    "consistent-return": 0,
+    "func-names": 0,
+    "class-methods-use-this": 0,
+    "prefer-promise-reject-errors": 0,
+    "no-use-before-define": 0,
+    "no-param-reassign": 0
   },
   "parserOptions":  {
     "ecmaVersion": 6,
     "sourceType":  "module",
     "ecmaFeatures":  {
-      "jsx":  true
+      "tsx":  true
     }
   },
   "env": {
@@ -19,3 +29,9 @@
     "node": true
   }
 }
+
+
+
+
+
+
