--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "dev": "rm -rf dist && parcel src/index.html --no-cache",
     "build": "parcel build src/index.html",
-    "start": "npm run build && node server.js"
+    "start": "npm run build && node server.js",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "yarn lint --fix",
+    "stylelint": "stylelint './src/**/*{.css,.pcss}' --cache",
+    "stylelint:fix": "yarn stylelint --fix"
   },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
@@ -15,10 +19,14 @@
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "parcel": "^2.8.3",
     "postcss": "^8.2.14",
     "postcss-nested": "^6.0.1",
     "stylelint": "^15.6.1",
+    "stylelint-config-standard": "^33.0.0",
     "typescript": "4.7.4"
   },
   "dependencies": {
