--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
   "plugins": ["@typescript-eslint/eslint-plugin"],
   "rules": {
     "max-len": [2, 160],
+    "indent": ["warn", 2],
     "@typescript-eslint/no-unused-vars": 2,
     "import/no-unresolved": 0,
     "import/extensions": 0,
