--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,8 @@
     "class-methods-use-this": 0,
     "prefer-promise-reject-errors": 0,
     "no-use-before-define": 0,
-    "no-param-reassign": 0
+    "no-param-reassign": 0,
+    "no-useless-constructor": 0
   },
   "parserOptions":  {
     "ecmaVersion": 6,
