--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,8 @@
     "prefer-promise-reject-errors": 0,
     "no-use-before-define": 0,
     "no-param-reassign": 0,
-    "no-useless-constructor": 0
+    "no-useless-constructor": 0,
+    "no-console": 0
   },
   "parserOptions":  {
     "ecmaVersion": 6,
