--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "4.7.4"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "express": "^4.18.2",
     "handlebars": "^4.7.7",
     "uuid": "^9.0.0"
