--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
     "no-use-before-define": 0,
     "no-param-reassign": 0,
     "no-useless-constructor": 0,
-    "no-console": 0
+    "no-console": 0,
+    "no-shadow": 0
   },
   "parserOptions":  {
     "ecmaVersion": 6,
