Заменил Parcel на Webpack

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,12 @@
     "no-param-reassign": 0,
     "no-useless-constructor": 0,
     "no-console": 0,
-    "no-shadow": 0
+    "no-shadow": 0,
+    "no-unused-vars": 0,
+    "import/no-extraneous-dependencies": [
+      "error",
+      {"devDependencies": ["**/*.config.js", "**/*.webpack.js", "**/webpack.*.js"]}
+    ]
   },
   "parserOptions":  {
     "ecmaVersion": 6,
@@ -33,9 +38,5 @@
     "node": true
   }
 }
-
-
-
-
 
 
