--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Papakhin Alexander",
   "license": "MIT",
   "scripts": {
+    "prepare": "husky install",
     "dev": "webpack serve --mode development",
     "build": "webpack --mode production",
     "start": "npm run build && node server.js",
@@ -16,8 +17,8 @@
     "@types/node": "^20.3.1",
     "@types/uuid": "^9.0.1",
     "@types/webpack": "^5.28.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.40.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -27,20 +28,22 @@
     "file-loader": "^6.2.0",
     "handlebars-loader": "^1.7.3",
     "html-webpack-plugin": "^5.5.3",
+    "husky": "^8.0.3",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.2.14",
     "postcss-import": "^15.1.0",
     "postcss-loader": "^7.3.3",
     "postcss-nested": "^6.0.1",
     "style-loader": "^3.3.3",
-    "stylelint": "^15.6.1",
+    "stylelint": "^15.9.0",
     "stylelint-config-standard": "^33.0.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "typescript": "4.7.4",
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "npm-run-all": "^4.1.5"
   },
   "dependencies": {
     "classnames": "^2.3.2",
