--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     "import/no-unresolved": 0,
     "import/extensions": 0,
     "import/prefer-default-export": 0,
+    "import/no-extraneous-dependencies": 0,
     "no-underscore-dangle": 0,
     "consistent-return": 0,
     "func-names": 0,
@@ -19,11 +20,7 @@
     "no-useless-constructor": 0,
     "no-console": 0,
     "no-shadow": 0,
-    "no-unused-vars": 0,
-    "import/no-extraneous-dependencies": [
-      "error",
-      {"devDependencies": ["**/*.config.js", "**/*.webpack.js", "**/webpack.*.js"]}
-    ]
+    "no-unused-vars": 0
   },
   "parserOptions":  {
     "ecmaVersion": 6,
@@ -35,7 +32,14 @@
   "env": {
     "es6": true,
     "browser": true,
-    "node": true
+    "node": true,
+    "mocha": true
+
+  },
+  "globals": {
+    "describe": "readonly",
+    "it": "readonly",
+    "beforeEach": "readonly"
   }
 }
 
