--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
     "lint": "eslint src/**/*.ts",
     "lint:fix": "yarn lint --fix",
     "stylelint": "stylelint './src/**/*{.css,.pcss}' --cache",
-    "stylelint:fix": "yarn stylelint --fix"
+    "stylelint:fix": "yarn stylelint --fix",
+    "test": "mocha"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.5",
+    "@types/jsdom": "^21.1.1",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^20.3.1",
+    "@types/proxyquire": "^1.3.28",
+    "@types/sinon": "^10.0.15",
     "@types/uuid": "^9.0.1",
     "@types/webpack": "^5.28.1",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
+    "chai": "^4.3.7",
     "css-loader": "^6.8.1",
     "eslint": "^8.40.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -29,11 +36,16 @@
     "handlebars-loader": "^1.7.3",
     "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.3",
+    "jsdom": "^22.1.0",
     "mini-css-extract-plugin": "^2.7.6",
+    "mocha": "^10.2.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.2.14",
     "postcss-import": "^15.1.0",
     "postcss-loader": "^7.3.3",
     "postcss-nested": "^6.0.1",
+    "proxyquire": "^2.1.3",
+    "sinon": "^15.2.0",
     "style-loader": "^3.3.3",
     "stylelint": "^15.9.0",
     "stylelint-config-standard": "^33.0.0",
@@ -42,8 +54,7 @@
     "typescript": "4.7.4",
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "npm-run-all": "^4.1.5"
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "classnames": "^2.3.2",
