--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20.3.1",
     "@types/proxyquire": "^1.3.28",
     "@types/sinon": "^10.0.15",
+    "@types/sinon-chai": "^3.2.9",
     "@types/uuid": "^9.0.1",
     "@types/webpack": "^5.28.1",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
@@ -46,6 +47,7 @@
     "postcss-nested": "^6.0.1",
     "proxyquire": "^2.1.3",
     "sinon": "^15.2.0",
+    "sinon-chai": "^3.7.0",
     "style-loader": "^3.3.3",
     "stylelint": "^15.9.0",
     "stylelint-config-standard": "^33.0.0",
